--- a/agreements.html
+++ b/agreements.html
@@ -85,10 +85,10 @@
                 <i class="fas fa-utensils"></i>
                 <a href="specialties.html#nut">Nutrição</a>
               </li>
-              <li>
+              <!-- <li>
                 <i class="fas fa-spa"></i>
                 <a href="specialties.html#fisio">Fisioterapia</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </li>
@@ -143,11 +143,10 @@
           </div>
         </li>
         <ul class="socials2">
-          <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+          <li class="wow fade-in">
             <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i class="fa fa-facebook"></i></a>
           </li>
-          <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                class="fa fa-instagram"></i></a></li>
+          <li class="wow fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
         </ul>
       </ul>
     </nav>
@@ -411,18 +410,13 @@
           <li class="fade-in"><a href="index.html">Início</a>
           </li>
           <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
-          <li class="fade-in" data-wow-duration="1s" data-wow-delay="0.3s"><a href="agreements.html">Convenções</a>
+          <li class="fade-in"><a href="agreements.html">Convenções</a>
           </li>
-          <li class="fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a href="contacts.html">Contactos</a>
+          <li class="fade-in"><a href="contacts.html">Contactos</a>
           </li>
         </ul>
       </nav>
     </div>
-    <p class="fade-in">Lorem ipsum dolor
-      sit
-      amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
     <div class="privacy-block fade-in">
       <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
         href="privacy.html">Política
