--- a/galleryST.html
+++ b/galleryST.html
@@ -26,7 +26,7 @@
 =========================================================-->
     <header id="header">
         <div id="logo">
-            <h1 class="wow fadeInDown">
+            <h1 class="fadeInDown">
                 <a href="index.html">
                     <span class="second">Clínica</span>
                     <span class="first">Gynébe</span>
@@ -84,10 +84,10 @@
                                 <i class="fas fa-utensils"></i>
                                 <a href="specialties.html#nut">Nutrição</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <i class="fas fa-spa"></i>
                                 <a href="specialties.html#fisio">Fisioterapia</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </li>
@@ -142,12 +142,11 @@
                     </div>
                 </li>
                 <ul class="socials2">
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                    <li class="fade-in">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </ul>
         </nav>
@@ -172,25 +171,11 @@
                 <h2>Clínica Gynébe de Santo Tirso</h2>
             </div>
             <div class="box2-wrapper2">
-                <h6 class="fade-in"><a href="#">Aliquam
-                        dapibus tincidunt metus praesent justo
-                        quis, lobortis dignissim.</a></h6>
-                <p class="fade-in">Lorem ipsum dolor sit
-                    amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                    irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetuer adipiscing
-                    elit.
-                    Praesent vestibulum
-                    molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.
-                    Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient
-                    montes,
-                    nascetur ridiculus mus.</p>
+                <h6 class="fade-in">A Clínica Gynébe nasceu em 2003 no coração da cidade do Porto como um espaço
+                    dedicado essencialmente à saúde da mulher e da criança. Em 2005 abriu uma segunda unidade em Santo
+                    Tirso. Ambas as clínicas oferecem uma localização central com excelente acessibilidade pedonal, por
+                    meio de transportes públicos ou viaturas próprias, dada a facilidade de vários parques próximos.
+                </h6>
             </div>
         </div>
         <div class="box6-wrapper1__inset1">
@@ -284,32 +269,24 @@
         <div class="footer_menu">
             <div class="socials">
                 <ul class="socials1">
-                    <li class="wow fade-in">
+                    <li class="fade-in">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
             <nav>
                 <ul>
-                    <li class="wow fade-in"><a href="index.html">Início</a>
+                    <li class="fade-in"><a href="index.html">Início</a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a
-                            href="specialties.html">Especialidades</a></li>
-                    <li class="wow fade-in"><a href="agreements.html">Convenções</a></li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a
-                            href="contacts.html">Contactos</a></li>
+                    <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                    <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                    <li class="fade-in"><a href="contacts.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
-        <p class="wow fade-in">Lorem ipsum dolor
-            sit
-            amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
-        <div class="privacy-block wow fade-in">
+        <div class="privacy-block fade-in">
             <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
