--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 =========================================================-->
     <header id="header">
         <div id="logo">
-            <h1 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
+            <h1 class="fadeInDown">
                 <a href="index.html">
                     <span class="second">Clínica</span>
                     <span class="first">Gynébe</span>
@@ -83,10 +83,10 @@
                                 <i class="fas fa-utensils"></i>
                                 <a href="specialties.html#nut">Nutrição</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <i class="fas fa-spa"></i>
                                 <a href="specialties.html#fisio">Fisioterapia</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </li>
@@ -141,12 +141,11 @@
                     </div>
                 </li>
                 <ul class="socials2">
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                    <li class="fade-in">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </ul>
         </nav>
@@ -198,83 +197,81 @@
             </div>
         </div> -->
         <div id="wrapper2" class="wrapper2 wrapper2__inset1">
-            <div class="heading1 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+            <div class="heading1 fade-in">
                 <h2>A nossa Missão</h2>
             </div>
             <div class="box4-wrapper1">
                 <div class="box4">
-                    <img class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s" src="images/page2_img1.png"
-                        alt="" />
-                    <h6 class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s">
-                        Na Clínica Gynébe todos os colaboradores estão vocacionados e orientados para o
-                        servir melhor através de uma ampla oferta de serviços necessários à mulher e à
-                        criança.
-                        A Clínica Gynébe é caracterizada pela qualidade do corpo médico, a forte componente
-                        humana do quadro de auxiliares e a disponibilidade da mais avançada tecnologia ao
-                        serviço da medicina. Em suma, a concepção de uma organização especialmente pensada
-                        para o melhor servir.</h6>
+                    <img class="fade-in" src="images/page2_img1.png" alt="" />
+                    <h6 class="fade-in">
+                        Na Clínica Gynébe todos os colaboradores estão vocacionados e orientados para o servir melhor
+                        através de uma ampla oferta de serviços dirigidos à mulher, à criança e à família. Em suma, uma
+                        organização especialmente pensada para a prevenção e combate à doença, bem como para a promoção
+                        da qualidade de vida, em termos físicos e psíquicos, e sempre com respeito pela sensibilidade
+                        emocional e individualidade humana.
+                    </h6>
                 </div>
             </div>
         </div>
         <div id="wrapper3" class="wrapper3">
-            <div class="heading2 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+            <div class="heading2 fade-in">
                 <h5>A Equipa</h5>
             </div>
             <div class="box3-wrapper1">
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
-                    <img src="images/page1_img4.png" alt="" />
+                <div class="box3 fade-in">
+                    <img src="images/mca.jpg" alt="" />
                     <h3>
                         <a>Dra. Manuela Calado Araújo</a>
                     </h3>
                     <p>Ginecologista/Obstetra</p>
                 </div>
 
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s">
-                    <img src="images/page1_img5.png" alt="" />
+                <div class="box3 fade-in">
+                    <img src="images/profile.png" alt="" />
                     <h3>
-                        <a>Dra. Gabriela Vascolcellos</a>
+                        <a>Dra. Gabriela Vasconcellos</a>
                     </h3>
                     <p>Pediatra/Neonatologista</p>
                 </div>
 
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.3s">
-                    <img src="images/page1_img6.png" alt="" />
+                <div class="box3 fade-in">
+                    <img src="images/profile.png" alt="" />
                     <h3>
                         <a>Dra. Ana Carriço</a>
                     </h3>
                     <p>Cardiologista Pedriátrica</p>
                 </div>
 
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                    <img src="images/page1_img7.png" alt="" />
+                <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <img src="images/profile.png" alt="" />
                     <h3>
                         <a>Dra. Leonilde Coelho</a>
                     </h3>
                     <p>Endocrinologista</p>
                 </div>
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                    <img src="images/page1_img7.png" alt="" />
+                <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <img src="images/profile.png" alt="" />
                     <h3>
                         <a>Dra. Dília Soares</a>
                     </h3>
                     <p>Nutricionista</p>
                 </div>
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                    <img src="images/page1_img7.png" alt="" />
+                <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <img src="images/profile.png" alt="" />
                     <h3>
                         <a>Dra. Marta Baltar</a>
                     </h3>
                     <p>Psicóloga/Psicoterapeuta</p>
                 </div>
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                    <img src="images/page1_img7.png" alt="" />
+                <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <img src="images/profile.png" alt="" />
                     <h3>
                         <a>Filipa Gomes</a>
                     </h3>
                     <p>Assistente Operacional</p>
                 </div>
-                <div class="box3 wow fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                    <img src="images/page1_img7.png" alt="" />
+                <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <img src="images/profile.png" alt="" />
                     <h3>
                         <a>Francisco Araújo</a>
                     </h3>
@@ -283,76 +280,61 @@
             </div>
         </div>
         <div id="wrapper4" class="wrapper4">
-            <div class="heading1 wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
-                <h2>Providing the best of care</h2>
+            <div class="heading1 fade-in">
+                <h2>Os Melhores Cuidados de Saúde</h2>
             </div>
-            <div class="list1-wrapper1">
-                <ul class="list1">
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a>Quico, o Grande</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a>Sed do eiusmod</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Conse ctetur</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Adipisicing</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Elit sed do eiusmod</a>
-                    </li>
-                </ul>
-                <ul class="list1">
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Leite condensado é vida</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Incididunt ut</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Labore</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Et dolore magna</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Ut enim</a>
-                    </li>
-                </ul>
-                <ul class="list1">
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Leite condensado é amor</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Quis nostrud</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.3s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Exercitation</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Ullamco laboris nisi</a>
-                    </li>
-                    <li class="wow slide-in" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <a href="#">Ut aliqu</a>
-                    </li>
-                </ul>
+            <div class="list1">
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Atendimento personalizado</p>
+                </div>
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Consultas em português, inglês e espanhol</p>
+                </div>
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Espaço infantil</p>
+                </div>
+
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Forte componente humana de todos os profissionais</p>
+                </div>
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Profissionais com elevada experiência clínica</p>
+                </div>
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Fácil acesso para pessoas de mobilidade reduzida</p>
+                </div>
+
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Respeito pela individualidade e sensibilidade de cada pessoa</p>
+                </div>
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Diferenciação técnica dos serviços prestados</p>
+                </div>
+                <div class="slide-in">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Localização em pelo coração da cidade do Porto</p>
+                </div>
+
+                <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Amplos serviços na saúde da mulher, da criança e da família</p>
+                </div>
+                <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Reconhecimento dos serviços prestados pelos nossos utentes</p>
+                </div>
+                <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <p>Acordos e Parcerias com a maioria das convenções</p>
+                </div>
             </div>
         </div>
     </section>
@@ -365,33 +347,24 @@
         <div class="footer_menu">
             <div class="socials">
                 <ul class="socials1">
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                    <li class="fade-in">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
             <nav>
                 <ul>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s"><a href="index.html">Início</a>
+                    <li class="fade-in"><a href="index.html">Início</a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a
-                            href="specialties.html">Especialidades</a></li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.3s"><a
-                            href="agreements.html">Convenções</a></li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a
-                            href="contacts.html">Contactos</a></li>
+                    <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                    <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                    <li class="fade-in"><a href="contacts.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
-        <p class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">Lorem ipsum dolor
-            sit
-            amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
-        <div class="privacy-block wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+        <div class="privacy-block fade-in">
             <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
