--- a/contacts_santo_tirso.html
+++ b/contacts_santo_tirso.html
@@ -29,7 +29,7 @@
 =========================================================-->
     <header id="header">
         <div id="logo">
-            <h1 class="wow fadeInDown">
+            <h1 class="fadeInDown">
                 <a href="index.html">
                     <span class="second">Clínica</span>
                     <span class="first">Gynébe</span>
@@ -87,10 +87,10 @@
                                 <i class="fas fa-utensils"></i>
                                 <a href="specialties.html#nut">Nutrição</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <i class="fas fa-spa"></i>
                                 <a href="specialties.html#fisio">Fisioterapia</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </li>
@@ -145,12 +145,11 @@
                     </div>
                 </li>
                 <ul class="socials2">
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                    <li class="fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </ul>
         </nav>
@@ -172,13 +171,13 @@
 =========================================================-->
     <section id="content" class="common">
         <div class="wrapper1 wrapper1__inset3">
-            <div class="heading1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+            <div class="heading1 fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                 <h2>Clinica Gynébe de Santo Tirso</h2>
             </div>
             <div class="map-wrapper1 map-wrapper1__offset1">
                 <div class="google-map2" id="google-map"></div>
             </div>
-            <p class="tac wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">Lorem ipsum dolor sit
+            <p class="tac fadeIn">Lorem ipsum dolor sit
                 amet
                 conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud
@@ -190,11 +189,11 @@
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
                 molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
             <div id="map"></div>
-            <address class="our-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+            <address class="our-address fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                 <a href="https://www.google.com/maps/dir/?api=1&travelmode=driving&layer=traffic&destination=41.34035341648697,-8.477143117721402"
                     target="_blank"><span>Rua D. Nuno Alvares Pereira 11, 1º sala<br />8 St. Tirso</span></a>
             </address>
-            <address class="contacts-address wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+            <address class="contacts-address fadeIn">
                 <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135">+351
                         225 432 135/6</a></span>
                 <span class="wrapper-info"><span class="wide">Fax:</span>+351 225 432 209</span>
@@ -224,32 +223,24 @@
         <div class="footer_menu">
             <div class="socials">
                 <ul class="socials1">
-                    <li class="wow fade-in">
+                    <li class="fade-in">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
             <nav>
                 <ul>
-                    <li class="wow fade-in"><a href="index.html">Início</a>
+                    <li class="fade-in"><a href="index.html">Início</a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a
-                            href="specialties.html">Especialidades</a></li>
-                    <li class="wow fade-in"><a href="agreements.html">Convenções</a></li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a
-                            href="contacts.html">Contactos</a></li>
+                    <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                    <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                    <li class="fade-in"><a href="contacts.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
-        <p class="wow fade-in">Lorem ipsum dolor
-            sit
-            amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
-        <div class="privacy-block wow fade-in">
+        <div class="privacy-block fade-in">
             <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
                 href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
