--- a/privacy.html
+++ b/privacy.html
@@ -25,7 +25,7 @@
 =========================================================-->
     <header id="header">
         <div id="logo">
-            <h1 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
+            <h1 class="fadeInDown">
                 <a href="index.html">
                     <span class="second">Clínica</span>
                     <span class="first">Gynébe</span>
@@ -83,10 +83,10 @@
                                 <i class="fas fa-utensils"></i>
                                 <a href="specialties.html#nut">Nutrição</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <i class="fas fa-spa"></i>
                                 <a href="specialties.html#fisio">Fisioterapia</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </li>
@@ -141,12 +141,11 @@
                     </div>
                 </li>
                 <ul class="socials2">
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                    <li class="fade-in">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </ul>
         </nav>
@@ -170,11 +169,11 @@
             <div class="container">
                 <div class="row">
                     <div class="grid_12">
-                        <div class="heading1 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                        <div class="heading1 fadeIn">
                             <h2>Privacy policy</h2>
                         </div>
                         <div class="box6-wrapper1">
-                            <div class="box6 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <div class="box6 fadeIn">
                                 <span class="h7">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent
                                     vestibulum molestie lacus.</span>
                                 <p>Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum
@@ -202,7 +201,7 @@
                                     sem. </p>
                             </div>
 
-                            <div class="box6 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <div class="box6 fadeIn">
                                 <span class="h7">Duis ultricies pharetra magna. Donec accumsan malesuada orci. </span>
                                 <p>Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
                                     fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget,
@@ -230,7 +229,7 @@
                                     Aenean nonummy hendrerit mauris. Phasellus porta. </p>
                             </div>
 
-                            <div class="box6 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <div class="box6 fadeIn">
                                 <span class="h7">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
                                     ridiculus mus.</span>
                                 <p>Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec,
@@ -256,7 +255,7 @@
                                     urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus.</p>
                             </div>
 
-                            <div class="box6 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <div class="box6 fadeIn">
                                 <span class="h7">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
                                 <p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.
                                     Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient
@@ -281,7 +280,7 @@
                                     consectetuer adipiscing elit. </p>
                             </div>
 
-                            <div class="box6 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <div class="box6 fadeIn">
                                 <span class="h7">Mauris fermentum dictum magna. Sed laoreet aliquam leo. </span>
                                 <p>Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor
                                     wisi
@@ -316,7 +315,7 @@
                                     auctor wisi et urna. </p>
                             </div>
 
-                            <div class="box6 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
+                            <div class="box6 fadeIn">
                                 <span class="h7">Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu
                                     lacus.</span>
                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
@@ -361,35 +360,25 @@
         <div class="footer_menu">
             <div class="socials">
                 <ul class="socials1">
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
+                    <li class="fade-in">
                         <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i
                                 class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a href="#"><i
-                                class="fa fa-instagram"></i></a></li>
+                    <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
             <nav>
                 <ul>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s"><a href="index.html">Início</a>
+                    <li class="fade-in"><a href="index.html">Início</a>
                     </li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.2s"><a
-                            href="specialties.html">Especialidades</a></li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.3s"><a
-                            href="agreements.html">Convenções</a></li>
-                    <li class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.5s"><a
-                            href="contacts.html">Contactos</a></li>
+                    <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                    <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                    <li class="fade-in"><a href="contacts.html">Contactos</a></li>
                 </ul>
             </nav>
         </div>
-        <p class="wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">Lorem ipsum dolor
-            sit
-            amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc.</p>
-        <div class="privacy-block wow fade-in" data-wow-duration="1s" data-wow-delay="0.1s">
-            <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
-                href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
+        <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+            href="privacy.html">Política de Privacidade </a><br><a>Design by Francisco Araújo</a>
         </div>
     </footer>
     <script src="js/app.js"></script>
