--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
 
                 <div class="box3 fade-in">
-                    <img src="images/profile.png" alt="" />
+                    <img src="images/gv.jpg" alt="" />
                     <h3>
                         <a>Dra. Gabriela Vasconcellos</a>
                     </h3>
@@ -312,7 +312,7 @@
 
                 <div class="slide-in">
                     <i class="fa fa-check" aria-hidden="true"></i>
-                    <p>Respeito pela individualidade e sensibilidade de cada pessoa</p>
+                    <p>Respeito pela individualidade e sensibilidade pessoal</p>
                 </div>
                 <div class="slide-in">
                     <i class="fa fa-check" aria-hidden="true"></i>
