--- a/specialties.html
+++ b/specialties.html
@@ -182,7 +182,7 @@
                         O seguimento ginecológico regular desde a adolescência até a menopausa é essencial na
                         prevenção e tratamento de doenças ginecológicas e de transmissão sexual, bem como no rastreio do
                         cancro ginecológico.
-                        A Ginecologia engloba uma vasta área de cuidados, tais como:
+                        A Ginecologia engloba:
                     </p>
                     <button><i class="fas fa-chevron-down"></i></button>
                     <ul class="list1__inset1">
@@ -254,8 +254,9 @@
                         tratamento das perturbações do sistema endócrino, composto pelas glândulas produtoras de
                         hormonas responsáveis pelo desenvolvimento, reprodução e metabolismo normais.</p>
                     <p class="fade-in">A tiróide, o pâncreas, a hipófise, as suprarrenais, as paratiróides, os ovários e
-                        os testículos, são glândulas endócrinas mais conhecidas, no entanto o osso e o tecido adiposo
+                        os testículos, são as glândulas endócrinas mais conhecidas, no entanto o osso e o tecido adiposo
                         têm também um papel importante na produção de hormonas.</p>
+                    <p class="fade-in">As situações que mais levam o paciente a consulta são:</p>
                     <button><i class="fas fa-chevron-down"></i></button>
                     <ul class="list1__inset1">
                         <li>Diabetes</li>
