--- a/contacts_santo_tirso.html
+++ b/contacts_santo_tirso.html
@@ -177,26 +177,14 @@
             <div class="map-wrapper1 map-wrapper1__offset1">
                 <div class="google-map2" id="google-map"></div>
             </div>
-            <p class="tac fadeIn">Lorem ipsum dolor sit
-                amet
-                conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum.
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
-                molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
             <div id="map"></div>
             <address class="our-address fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                 <a href="https://www.google.com/maps/dir/?api=1&travelmode=driving&layer=traffic&destination=41.34035341648697,-8.477143117721402"
                     target="_blank"><span>Rua D. Nuno Alvares Pereira 11, 1º sala<br />8 St. Tirso</span></a>
             </address>
             <address class="contacts-address fadeIn">
-                <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135">+351
-                        225 432 135/6</a></span>
-                <span class="wrapper-info"><span class="wide">Fax:</span>+351 225 432 209</span>
+                <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135"> +351
+                        252 850 480</a></span>
                 <span class="wrapper-info">E-mail:
                     <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
                 </span>
