--- a/agreements.html
+++ b/agreements.html
@@ -402,7 +402,8 @@
           <li class="fade-in">
             <a href="https://www.facebook.com/ClinicaGynebe/" target="_blank"> <i class="fa fa-facebook"></i></a>
           </li>
-          <li class="fade-in"><a href="#"><i class="fa fa-instagram"></i></a></li>
+          <li class="fade-in"><a href="https://www.instagram.com/clinica_gynebe/"><i class="fa fa-instagram"></i></a>
+          </li>
         </ul>
       </div>
       <nav>
