--- a/html/index.html
+++ b/html/index.html
@@ -174,6 +174,7 @@
                     <span class="first">Paixão pela Vida</span>
                     <span class="second">inspirada por si</span>
                 </div>
+                <div class="scroll-down"></div>
             </div>
             <!-- <div class="wrapper1">
             <div class="slider">
@@ -210,8 +211,10 @@
                         <h6 class="fade-in">
                             Na Clínica Gynébe todos os colaboradores estão vocacionados e orientados para o servir
                             melhor
-                            através de uma ampla oferta de serviços dirigidos à mulher, à criança e à família. Em
-                            suma, uma
+                            através de uma ampla oferta de serviços dirigidos à mulher, à criança e à família.
+                        </h6>
+                        <h6 class="fade-in">
+                            Em suma, uma
                             organização especialmente pensada para a prevenção e combate à doença, bem como para a
                             promoção
                             da qualidade de vida, em termos físicos e psíquicos, e sempre com respeito pela
@@ -251,7 +254,7 @@
                     </div>
 
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <img src="../images/profile.png" alt="" />
+                        <img src="../images/lc.jpg" alt="" />
                         <h3>
                             <a>Dra. Leonilde Coelho</a>
                         </h3>
@@ -378,6 +381,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/scrollDown.js"></script>
 </body>
 
 </html>
